// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircleBadge > respects the inline prop 1`] = `
<div
  class="prc-CircleBadge-CircleBadge-AFS8i"
  data-inline=""
  style="width: 96px; height: 96px;"
/>
`;

exports[`CircleBadge > respects the variant prop 1`] = `
<div
  class="prc-CircleBadge-CircleBadge-AFS8i"
  style="width: 128px; height: 128px;"
  variant="large"
/>
`;

exports[`CircleBadge > uses the size prop to override the variant prop 1`] = `
<div
  class="prc-CircleBadge-CircleBadge-AFS8i"
  size="20"
  style="width: 20px; height: 20px;"
  variant="large"
/>
`;
